# scrapy

./: conftest.py  pyproject.toml
docs/: conf.py
scrapy/: __init__.py  crawler.py  dupefilters.py  exceptions.py  item.py  link.py  mail.py  middleware.py  pqueues.py  shell.py
scrapy/commands/: bench.py  crawl.py  genspider.py  parse.py  startproject.py
scrapy/contracts/: __init__.py  default.py
scrapy/core/: engine.py  scheduler.py  scraper.py  spidermw.py
scrapy/core/downloader/: middleware.py  webclient.py
scrapy/core/downloader/handlers/: http11.py  s3.py
scrapy/downloadermiddlewares/: cookies.py  httpauth.py  httpcompression.py  retry.py  robotstxt.py
scrapy/extensions/: feedexport.py  memusage.py
scrapy/http/: cookies.py
scrapy/http/request/: form.py
scrapy/http/response/: __init__.py  text.py
scrapy/linkextractors/: __init__.py
scrapy/loader/: common.py  processors.py
scrapy/pipelines/: files.py  images.py  media.py
scrapy/selector/: unified.py
scrapy/spidermiddlewares/: httperror.py  referer.py  urllength.py
scrapy/spiders/: __init__.py
