[tool.poetry]
name = "scrapy"
version = "0.1.0"
description = ""
authors = ["Andy <open@zhishimao.cn>"]

[tool.poetry.dependencies]
python = "^3.9"
Twisted = "^17.9.0"
cssselect = "^0.9.1"
itemloaders = "^1.0.1"
parsel = "^1.5.0"
pyOpenSSL = "^16.2.0"
queuelib = "^1.4.2"
service_identity = "^16.0.0"
w3lib = "^1.17.0"
"zope.interface" = "^4.1.3"
Protego = "^0.1.15"
itemadapter = "^0.1.0"
lxml = "^4.6.2"
PyDispatcher = "^2.0.5"
Pillow = "^8.1.2"
Brotli = "^1.0.9"
zstandard = "^0.15.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"
pylint = "^2.7.2"
Sphinx = "^3.0"
sphinx-hoverxref = "^0.2b1"
sphinx-notfound-page = "^0.4"
sphinx-rtd-theme = "^0.4"
pytest = "^6.2.2"
flake8 = "^3.8.4"
pytest-flake8 = "^1.0.7"
black = {version = "^20.8b1", allow-prereleases = true}
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
